--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: cascadingfacenet
 channels:
   - pytorch
   - nvidia  # Add nvidia channel for CUDA components
-  - conda-forge
+  - conda-forge # Prioritize conda-forge over defaults
   - defaults
 
 dependencies:
@@ -13,9 +13,9 @@ dependencies:
   - cudnn                     # Prefer nvidia channel
   - scikit-learn
   - pillow
-  - opencv                  # For cv2 image loading (BGR)
   - pip
   - pip:
     - insightface==0.7.3      # Pin insightface version
     - onnxruntime-gpu>=1.16   # Correct spelling
+    - opencv-python           # Use pip version for simplicity
     - pytest                  # Optional 
